14-kubernetes/files/6_volumes/3_deployment-nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: static
          containerPort: 8080
          protocol: TCP
        - name: dynamic
          containerPort: 8081
          protocol: TCP
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
          items:
          - key: nginx.config
            path: nginx.conf

---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  ports:
  - name: static-svc
    port: 8080
    targetPort: static
    protocol: TCP
  - name: dynamic-svc
    port: 8081
    targetPort: dynamic
    protocol: TCP
  type: ClusterIP
