14-kubernetes/files/6_volumes/5_deployment-wp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wp
  template:
    metadata:
      labels:
        app: wp
    spec:
      containers:
      - name: wp
        image: wordpress
        imagePullPolicy: IfNotPresent
        ports:
        - name: wp
          containerPort: 80
          protocol: TCP
        volumeMounts:
        - name: wp-data
          mountPath: /var/www/html
      volumes:
      - name: wp-data
        persistentVolumeClaim:
          claimName: wp-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: wp
spec:
  selector:
    app: wp
  ports:
  - name: wp
    port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
