14-kubernetes/files/6_volumes/ingress-wp.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp
spec:
  rules:
  - host: wp.test.local
    http:
      paths: 
      - path: /
        pathType: Prefix 
        backend:
          service:
            name: wp
            port:
              number: 80
